<resources>
    <string name="title_bonus">Bonus</string>
    <string name="title_kpis">KPIs</string>
    <string name="title_actions">Actions</string>
    <string name="title_phone">Phones</string>
    <string name="title_more">More</string>
    <string name="title_settings">Settings</string>
    <string name="title_dashboard">Agent</string>
    <string name="goal_text">GOAL</string>
    <string name="variance_text">VARIANCE</string>
    <string name="actual_text">&#160;&#160;ACTUAL</string>
    <string name="sales_text">SALES</string>
    <string name="order_count_text">ORDERCOUNT</string>
    <string name="food_text">FOOD</string>
    <string name="labour_text">LABOR</string>
    <string name="service_text">SERVICE</string>
    <string name="cash_text">CASH</string>
    <string name="oer_text">OER</string>
    <string name="eadt_text">eADT</string>
    <string name="extreme_text">Extreme Delivery</string>
    <string name="singles_text">Singles %</string>
    <string name="load_text">Load</string>
    <string name="wait_text">Wait</string>
    <string name="otd_text">OTD</string>
    <string name="ping_text">Ping</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="forget_passowrd">FORGOT PASSWORD?</string>
    <string name="login_text">LOG IN</string>
    <string name="internet_connection">Please check your internet connection and try again</string>
    <string name="confirm_text">CONFIRM</string>
    <string name="verify_text">VERIFY</string>
    <string name="setup_text">Set up a new password.</string>
    <string name="new_password_text">NEW PASSWORD</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="forgot_pwd">FORGOT PASSWORD</string>
    <string name="enter_email">Please enter your email and we will send you the reset instructions.</string>
    <string name="dind_recived_text">Didn\'t receive the code? </string>
    <string name="resend_code">Resend code.</string>
    <string name="password_not_matched">New password and confirm password does not match.</string>
    <string name="done_text">DONE</string>
    <string name="change_pwd_successfully">Password update was successful</string>
    <string
            name="email_confirmation_text"><![CDATA[Please enter the verification code sent to <b>%1$s</b> to finish resetting your password.]]></string>
    <string name="enter_code_text">Please enter the confirmation code sent to</string>
    <string name="finish_text">to finish resetting your password.</string>
    <string name="confirmation_code">CONFIRMATION CODE</string>
    <string name="verification_code_text">VERIFICATION CODE</string>
    <string name="confirmation_code_sent">Verification code has been sent to your email.</string>
    <string name="under_limit">UNDERLIMIT</string>
    <string name="out_of_range">OUTOFRANGE</string>
    <string name="neutral">NEUTRAL</string>
    <string name="password_change_succesfull">Password update was successful</string>
    <string name="invalid_email_error">please enter valid email.</string>
    <string name="awus_text">AWUS</string>
    <string name="goal_text_small">Goal:</string>
    <string name="variance_text_small">Variance:</string>
    <string name="pcy">PCYA %</string>
    <string name="olo_pcy">OLO PCYA %</string>
    <string name="phone_pcys">Phone PCYA %</string>
    <string name="walkin_pcy">Walkin PCYA %</string>
    <string name="delivery_pcy">Delivery PCYA %</string>
    <string name="carry_out_pcy">Carryout PCYA %</string>
    <string name="order_count">Order Count</string>
    <string name="olo_count"> OLO Order count</string>
    <string name="phones_order_count">Phones Order count</string>
    <string name="walkin_order_count">Walkin Order count</string>
    <string name="delivery_order_count">Delivery Order count</string>
    <string name="carry_outorder_count">Carryout Order count</string>
    <string name="olo_sales">OLO Sales</string>
    <string name="olo_pcya">OLO PCYA %</string>
    <string name="olo_order_count">OLO Order count </string>
    <string name="olo_average_ticket">OLO Average Ticket</string>
    <string name="phone_sales">Phone Sales</string>
    <string name="phone_order_count">Phones Order count</string>
    <string name="walkin_sales">Walkin Sales</string>
    <string name="delivery_sales">Delivery Sales</string>
    <string name="delivery_average_tickets">Delivery Average Ticket</string>
    <string name="carry_out_sales">Carryout Sales</string>
    <string name="carry_average_tickets">Carryout Average Ticket</string>
    <string name="average_ticket">Average Ticket</string>
    <string name="average_phone_ticket">Phone Average Ticket</string>
    <string name="average_walkin_ticket">Walkin Average Ticket</string>
    <string name="labour_text_small">Labor</string>
    <string name="labour_vs_goal_text">Labor</string>
    <string name="sales_per_labour_text">Sales Per Labor hour</string>
    <string name="labour_hour_text">Labor hours</string>
    <string name="labor_vs_managment_budget_text">Labor v manager Budget</string>
    <string name="breaks_text">Breaks</string>
    <string name="breaks_qty_text">Breaks Qty</string>
    <string name="labor_with_breaks_text">Labor with breaks</string>
    <string name="labor_without_breaks_ot_text">Labor without breaks &amp; OT</string>
    <string name="driver_ot_text">Driver OT (Full)</string>
    <string name="driver_ot_premium_text">Driver OT Premium</string>
    <string name="staffing_text">Staffing</string>
    <string name="total_tm_count_text">Total TM Count</string>
    <string name="insider_text">Insiders</string>
    <string name="drivers_text">Drivers</string>
    <string name="tm_count_less_than_thirty_text">TM Count > 30 Hrs</string>
    <string name="tm_count_grater_than_thirty_text">TM Count > 30 Hrs</string>
    <string name="service_text_small">Service</string>
    <string name="leg_time_text">Leg Time</string>
    <string name="delivery_oc_text">Delivery Order count</string>
    <string name="extreme_delivery_oc_text">Extreme Delivery Order count</string>
    <string name="singles_percentage_text">Singles %</string>
    <string name="double_text">Doubles %</string>
    <string name="triples_text">Triples %</string>
    <string name="load_time_text">Load Time</string>
    <string name="carry_out_laod_time_text">Carryout Load time</string>
    <string name="wait_time_text">Wait Time</string>
    <string name="aot_text">AOT %</string>
    <string name="hang_up_text">Hang Ups</string>
    <string name="out_door_text">Out The Door </string>
    <string name="csat_text">CSAT Meter Rating (Day Avg)</string>
    <string name="weekly_text">Weekly CCC Closure Rate</string>
    <string name="cc_per_100_text">CCC per 1000 Orders(90 Day Avg)</string>
    <string name="extreme_delivery_text">Extreme Delivery %</string>
    <string name="oer_start_text">OER Start</string>
    <string name="twenty_eight_days_eat">28 Day eADT</string>
    <string name="twenty_six_days">26 days to go</string>
    <string name="days_to_go">DAYS TO GO</string>
    <string name="twenty_eight_extreme_delivery">28 Extreme Deliveries</string>
    <string name="twenty_eight_single">28 Singles</string>
    <string name="twenty_eight_days_load">28 Load</string>
    <string name="last_food_score">Last Food Safety Score</string>
    <string name="last_image_score">Last Image Score</string>
    <string name="last_product_score">Last product Score</string>
    <string name="last_eADT_score">Last eADT Score</string>
    <string name="last_extreme_delivery_score">Last Extreme Deliveries Score</string>
    <string name="last_single_score">Last Singles Score</string>
    <string name="last_load_score">Last Load Score</string>
    <string name="last_oer_score">Last OER Score</string>
    <string name="ideal_vs_food_variance_text">FOOD</string>
    <string name="ideal_vs_food_dollar_text">Ideal vs Actual Food Variance $</string>
    <string name="ideal_food_text">Ideal Food $</string>
    <string name="actual_food_text">Actual Food $</string>
    <string name="cheese_text">Cheese</string>
    <string name="dough_text">Dough</string>
    <string name="twenty_oz_text">20oz</string>
    <string name="top_five_text">Top 5</string>
    <string name="all_items_text">ALL ITEMS</string>
    <string name="ending_inventory_text">Ending Inventory</string>
    <string name="food_bought_text">Food Bought $</string>
    <string name="actual_text_small">Actual</string>
    <string name="dollar_text">\$</string>
    <string name="nagetive_dollar_text">\-$</string>
    <string name="percentage_text">%</string>
    <string name="period_text">Period</string>
    <string name="monthly_text">Monthly</string>
    <string name="done_text_small">Done</string>
    <string name="today_text">Today  </string>
    <string name="yesterday_text">Last service</string>
    <string name="this_week_text">This week</string>
    <string name="this_month_text">This month</string>
    <string name="last_month_text">Last month</string>
    <string name="this_year_text">This year</string>
    <string name="last_year_text">Last year</string>
    <string name="last_seven_days_text">Rolling 7 days</string>
    <string name="last_twenty_eight_days">Rolling 28 days</string>
    <string name="last_seven_days">Last 7 days</string>
    <string name="last_twenty_eight">Last 28 days</string>
    <string name="custom_range_text">Custom range</string>
    <string name="store_text">Store</string>
    <string name="restaurant_text">Restaurant</string>
    <string name="supervisor_text">supervisor</string>
    <string name="select_text">All</string>
    <string name="clear_all_text">Clear all</string>
    <string name="last_week_text">Last week</string>
    <string name="area_text">Restaurant group</string>
    <string name="gm_text">gm</string>
    <string name="ceo_text">ceo</string>
    <string name="all_store_text">All restaurants</string>
    <string name="reset_text">Reset</string>
    <string name="apply_text">APPLY</string>
    <string name="state_text">State</string>
    <string name="region_text">Region</string>
    <string name="select_all_store">Select all restaurants</string>
    <string name="select_all_area">Select all restaurant groups</string>
    <string name="select_all_supervisor">Select all supervisors</string>
    <string name="select_all_region">Select all region</string>
    <string name="select_all_state">Select all states</string>
    <string name="do_text">do</string>
    <string name="awus_text_overview"><u>AWUS overview</u></string>
    <string name="ideal_vs_food_variance_text_overview"><u>Food overview</u></string>
    <string name="labour_text_overview"><u>Labor overview</u></string>
    <string name="service_text_overview"><u>Service overview</u></string>
    <string name="oer_text_overview"><u>OER overview</u></string>
    <string name="search_text">&#160;Search</string>
    <string name="logout">Log out</string>
    <string name="cash_text_overview"><u>Cash overview</u></string>
    <string name="potential_text">POTENTIAL</string>
    <string name="focus_text">FOCUS</string>
    <string name="forget_password_text">FORGOT PASSWORD</string>
    <string name="new_password_text_small">New password</string>
    <string name="use_finger_print">Use fingerprint to login</string>
    <string name="past_actions"><u>Past actions</u></string>
    <string name="no_new_actions">No new actions</string>
    <string name="supervisor_text_caps">Supervisor</string>
    <string name="wtd_text">WTD</string>
    <string name="mtd_text">MTD</string>
    <string name="ytd_text">YTD</string>
    <string name="ok_text">OK</string>
    <string name="login_fail_text">Failed to log in</string>
    <string name="login_fail_description_text">Your email or password  was incorrect. Please try again.</string>
</resources>