<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="270dp"
        android:layout_height="160dp"
        android:background="@drawable/rounded_white_bg">

    <TextView
            android:id="@+id/title_text"
            android:layout_width="117dp"
            android:layout_height="20dp"
            tools:text="@string/login_fail_text"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="20dp"
            android:layout_marginStart="77dp"
            android:layout_marginEnd="76dp"
            app:layout_constraintBottom_toTopOf="@id/description_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/description_text"
            android:layout_width="225dp"
            android:layout_height="32dp"
            tools:text="@string/login_fail_description_text"
            android:textColor="@color/text_color"
            android:textSize="13sp"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="22dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_text" />

    <View
            android:id="@+id/divider_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dialog_divider"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_text" />


    <TextView
            android:id="@+id/btn_ok_text"
            android:layout_width="28dp"
            android:layout_height="22dp"
            android:text="@string/ok_text"
            android:textColor="@color/dialog_text_blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="14dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_view" />

</androidx.constraintlayout.widget.ConstraintLayout>